--- a/VirtualApp/build.gradle
+++ b/VirtualApp/build.gradle
@@ -8,6 +8,7 @@ buildscript {
             name 'Google'
         }
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -27,6 +28,7 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        mavenCentral()
     }
 }
 
