--- a/VirtualApp/app/build.gradle
+++ b/VirtualApp/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "io.virtualapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 24
         versionName "1.2.5"
@@ -63,6 +63,6 @@ dependencies {
     compile 'org.jdeferred:jdeferred-android-aar:1.2.4'
     // ThirdParty
     compile 'com.jonathanfinerty.once:once:1.0.3'
-    compile 'com.flurry.android:analytics:6.9.2'
+    implementation  'com.flurry.android:analytics:12.5.0@aar'
     compile 'com.kyleduo.switchbutton:library:1.4.6'
 }
